--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
     font-weight: 100;
     margin-top: 50px;
     margin-bottom: 20px;
-    word-break:break-all;
+    word-break:keep-all;
     word-wrap: normal;
     text-align-last: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
