--- a/style.css
+++ b/style.css
@@ -69,10 +69,13 @@ p #author{
 
 
     @media screen and (max-width:500px){
-
-        .box{
+        
+          .box{
             width: 100%;
             height: 100%;
+            margin-top: 100px;
+            border-top-left-radius: 50px;
+            border-top-right-radius: 50px;
         }
         
     }
