--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ p #author{
           .box{
             width: 100%;
             height: 100%;
-            border-radius : none;  
+            border-radius :0;  
         }
         
     }
